...
              actions: [
                TextButton(
                  child: const Text('Cancelar'),
                  onPressed: () => Navigator.of(context).pop(),
                ),
                TextButton(
                  child: const Text('Aceptar'),
                  onPressed: () {
                    _updateSelectedLevels(_selectedLevels);
                    Navigator.of(context).pop();
                  },
                ),
              ],
...
